--- a/styles/charadex.css
+++ b/styles/charadex.css
@@ -32,7 +32,7 @@ body {
   --cd-faded-background-color:           #f8f8f8;
 
   /* Background Extras */
-  --cd-body-background-image:             url();
+  --cd-body-background-image:             url(https://i.pinimg.com/originals/d7/0b/67/d70b67f41d615d7ebd9ce1c2a6a65b95.gif);
 
   /* ============================================================= */
   /* Text
