--- a/includes/header.html
+++ b/includes/header.html
@@ -2,7 +2,7 @@
     <div class="container">
 
         <!-- Brand -->
-        <a class="navbar-brand" href="index.html"><i class="fas fa-floppy-disk fa-fw"></i>Plumii</a>
+        <a class="navbar-brand" href="index.html"><i class="fas fa-floppy-disk fa-fw"></i>Kazuli Land</a>
 
         <!-- Toggle -->
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#charadexnav">
