--- a/styles/charadex.css
+++ b/styles/charadex.css
@@ -32,7 +32,7 @@ body {
   --cd-faded-background-color:           #f8f8f8;
 
   /* Background Extras */
-  --cd-body-background-image:             url(https://images.squarespace-cdn.com/content/v1/580b905c46c3c4e1c73c456d/1584116214046-89PUST9F46A88SOAAO5M/image-asset.jpeg);
+  --cd-body-background-image:             url(https://i.pinimg.com/564x/78/56/d1/7856d1e8255311ba28c466dbc8b81567.jpg);
 
   /* ============================================================= */
   /* Text
