--- a/styles/charadex.css
+++ b/styles/charadex.css
@@ -27,7 +27,7 @@ body {
   /* ============================================================= */
   /* Backgrounds
   ================================================================ */
-  --cd-body-background-color:            #d1d0df;
+  --cd-body-background-color:            #e3e4e4;
   --cd-content-background-color:         #ffffff;
   --cd-faded-background-color:           #f8f8f8;
 
